--- a/src/pages/globals.scss
+++ b/src/pages/globals.scss
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
 body {
   padding: 0;
@@ -17,6 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
+  paint-order: stroke;
 }
 
 @media (prefers-color-scheme: dark) {
